# llm-playground

./: docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
app/: pyproject.toml
app/app/agents/: basic.py
app/app/basic/: basic.py  haiku.py  image.py  raw.py  roles.py  stream.py  vector.py
app/app/evals/: cookbook-regression.py
app/app/functions/: ks.py  weather.py
app/app/responses-api/stream/: basic.py
app/app/responses-api/tools/: web-search.py
