[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Peter Bryant <pbryant@peterbryant.me.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
openai = "1.54.*"


[tool.poetry.group.dev.dependencies]
ruff = "0.7.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
